--- a/client/home.html
+++ b/client/home.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <title>3D data analysis</title>
     <link rel="stylesheet" href="css/home_style.css">
     <!-- ライブラリ読み込みなのでheadの最後 -->
@@ -12,37 +13,41 @@
     <div class="loader-wrap" id="loader-wrap">
       <div class="loader" id="loader">Loading...</div>
     </div>
-    <h1 class = page_top>Let's analyzre your data with 3D Network!</h1>
-    <label id=buttonLabel1 class=buttonLabel1>
-      <input type="file" id="upload_data" class="upload_data" name="upload_data" accept=".csv" onchange="MakeTable()">
-      File select
-    </label>
-    <br><br>
-    <form name="data_check_form" class="data_check_form">
-      <table name="data_check" id="data_check" class="data_check"></table>
+    <h1 class = page_top>3D network data analysis</h1>
+    <div class="button_flex">
+      <label id=file_select_label class=file_select_label>
+        <input type="file" id="file_select" class="file_select" name="file_select" accept=".csv" onchange="MakeTable()">
+        File select
+      </label>
+      <button type="button" name="update_value" class=update_value id=update_value onclick="ValueUpdate()">Plot graph!</button>
+    </div>
+    <p class=p_4rem></p>
+    <form name="data_check_form" class="data_check_form" id="data_check_form">
+      <table name="data_check_table" id="data_check_table" class="data_check_table"></table>
     </form>
-    <br>
+    <p class=p_4rem></p>
     <form id="value_form">
       <div class="value_input_div">
-        <label>Lowest occur
+        <label class="value_input_label" id=lowest_occure_label>Lowest occur
           <br>
-      	  <input class="value_input" id="lowest_occure" type="number" min="0" step="1" value="10">
+      	  <input class="value_input" id="lowest_occure" type="number" min="0" max="10000" step="1" value="10">
         </label>
       </div>
       <div class="value_input_div">
-        <label>Lowest simpson
+        <label class="value_input_label" id="lowest_simpson_label">Lowest simpson
           <br>
           <input class="value_input" id="lowest_simpson" type="number" step="0.1" max="1" min="0" value="0.3">
         </label>
       </div>
-      <button type="button" name="update_value" onclick="ValueUpdate()">Update value</button>
+      <!-- <button type="button" name="update_value" class=update_value onclick="ValueUpdate()">Update value</button> -->
+      <p id=network_name class=network_name></p>
     </form>
     <br>
-    <!-- バグ補正のための隠し仕込みグラフ -->
-    <div id=received_data class=received_data></div>
+    <div id="received_data" class="received_data"></div>
     <!-- 実行系scriptなのでbodyの最後 -->
     <script type="text/javascript" src="js/myscr.js"></script>
   </body>
 </html>
-<!-- cashe/84.83.255.39.html -->
+
+<label for=""></label>
 
