ロード画面修正　その１

--- a/calc_page/main.html
+++ b/calc_page/main.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
 </head>
 <body>
+  <p id="rfl_message">Refrecting to your browser...<br>Wait me just a second!</p>
   <div class="loader-wrap" id="loader-wrap">
     <div class="loader" id="loader">Loading...</div>
   </div>
