--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css?2226">
-	<link rel="stylesheet" type="text/css" href="style.css?1850">
-	<link rel="stylesheet" type="text/css" href="./css/animate.css?7712">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css?7606">
+	<link rel="stylesheet" type="text/css" href="style.css?383">
 	<link rel="stylesheet" type="text/css" href="./css/feather.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Oleo+Script&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Pacifico&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -70,10 +69,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-				<h3 class="mg-md animated fadeIn" data-appear-anim-style="fadeIn">
+				<h3 class="mg-md">
 					How to use
 				</h3>
-				<p class="p-style animated fadeIn" data-appear-anim-style="fadeIn">
+				<p class="p-style">
 					1.Prepare a dataset(.csv) for which you want to examine co-occurrence.<br>2.Press the "Let's analyze!" button above.<br>3.Press the "File select" button.<br>4.Open the csv file prepared in step 1.<br>5.Select at least two columns for which you want to examine co-occurrence.<br>6.Press the “Plot graph!" button.<br>7.Your 3D co-occurrence network is ready.<br><br>Note: <br>If you do not have the csv data, you can get it from this site.<br><a href="https://data.world/" target="_blank">https://data.world/</a><br>
 				</p>
 			</div>
@@ -83,17 +82,17 @@
 <!-- bloc-2 END -->
 
 <!-- bloc-3 -->
-<div class="bloc l-bloc" id="bloc-3">
+<div class="bloc l-bloc " id="bloc-3">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
-				<h3 class="mg-md btn-resize-mode text-lg-center animated fadeIn" data-appear-anim-style="fadeIn">
+				<h3 class="mg-md btn-resize-mode text-lg-center float-md-none text-md-center text-sm-center">
 					Credit:
 				</h3>
 			</div>
 		</div>
-		<div class="row animated fadeIn" data-appear-anim-style="fadeIn">
-			<div class="col-lg-4 col-md-4 offset-lg-1">
+		<div class="row">
+			<div class="col-lg-4 col-md-4 offset-lg-1 offset-md-1">
 				<div class="card">
 					<div class="card-body team-card">
 						<img src="img/lazyload-ph.png" data-src="img/90E8897E-3ABC-4340-B0FC-1B0A7881A248.JPG" class="rounded-circle mx-auto d-block mt-5 lazyload" width="100" alt="90E8897E 3ABC-4340-B0FC-1B0A7881A248.JPG" />
@@ -104,7 +103,7 @@
 							Developer
 						</h5>
 						<div class="row">
-							<div class="col-6 col-sm-2 offset-sm-2 offset-md-1 offset-lg-5 col-lg-2">
+							<div class="col-6 col-sm-2 offset-lg-5 col-lg-2 col-md-4 offset-md-4 offset-sm-5 offset-3">
 								<div class="text-center">
 									<a href="https://sites.google.com/view/repaintermypage/%E3%83%9B%E3%83%BC%E3%83%A0" target="_blank"><span class="icon-md feather-icon icon-link"></span></a>
 								</div>
@@ -113,7 +112,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 offset-lg-2">
+			<div class="col-lg-4 col-md-4 offset-lg-2 offset-md-2">
 				<div class="card">
 					<div class="card-body team-card">
 						<img src="img/lazyload-ph.png" data-src="img/IMG_3349%202.jpg" class="rounded-circle mx-auto d-block mt-5 lazyload" width="100" alt="90E8897E 3ABC-4340-B0FC-1B0A7881A248.JPG" />
@@ -124,9 +123,9 @@
 							Designer
 						</h5>
 						<div class="row">
-							<div class="col-6 col-sm-2 col-lg-2 offset-lg-5">
+							<div class="col-6 col-sm-2 col-lg-2 offset-lg-5 col-md-4 offset-md-4 offset-sm-5 offset-3">
 								<div class="text-center">
-									<a href="https://leendemusic.github.io/LeendeLinkTree/" target="_blank"><span class="icon-md feather-icon icon-link "></span></a>
+									<a href="https://leendemusic.github.io/LeendeLinkTree/" target="_blank"><span class="icon-md feather-icon icon-link"></span></a>
 								</div>
 							</div>
 						</div>
@@ -151,11 +150,11 @@
 <!-- Additional JS --><script src="./js/jquery.min.js"></script>
 
 
-<script src="./js/bootstrap.bundle.js?737"></script>
-<script src="./js/blocs.js?7142"></script>
+<script src="./js/bootstrap.bundle.js?5392"></script>
+<script src="./js/blocs.js?3259"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/particles.min.js?980"></script>
-<script src="./js/particles-setup.js?5150"></script>
+<script src="./js/particles.min.js?9601"></script>
+<script src="./js/particles-setup.js?6564"></script>
 <!-- Additional JS END -->
 
 
