--- a/calc_page/main.html
+++ b/calc_page/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name=”viewport” content=”width=device-width, initial-scale=1″>
-  <title>3D data analysis</title>
+  <title>3D network calc page</title>
   <link rel="stylesheet" href="main_style.css">
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" type="image/png" href="src/favicon.png">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id='loading'><div class='loadingMsg'>Page loading...</div></div>
-  <h1 class = page_top>3D Co-occurrence Network</h1>
+  <h1 class = page_top>3D Network analyze page</h1>
   <div class="row_div" id="row_sec1">
     <form name="file_select_form" id="file_select_form">
       <label for="file_select" id="file_select_label" class="btn_label1">
@@ -22,7 +22,7 @@
       </label>
       <input type="text" id="page_id" name="page_id" >
     </form>
-    <a class="page_link" href="https://tkworkfrom220320.com/3d_network_analysis/index.html">Tutorial</a>
+    <a class="page_link" href="../index.html">Tutorial</a>
   </div>
   <form name="data_check_form" class="data_check_form" id="data_check_form">
     <table name="data_check_table" id="data_check_table" class="data_check_table">
