--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div><div id="particles-js"></div>
 				</div>
 				<div class="text-center">
-						<a href="calc_page/main.html" class="btn btn-xl btn-charcoal btn-clean button">Let&rsquo;s analyse!</a>
+						<a href="calc_page/main.html" class="btn btn-xl btn-charcoal btn-clean button">Go to analyze page!</a>
 					</div>
 			</div>
 		</div>
@@ -68,10 +68,34 @@
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
 				<h3 class="mg-md">
-					How to use
+					How to use:
 				</h3>
 				<p class="p-style">
-					1.Prepare a dataset(.csv) for which you want to examine co-occurrence.<br>2.Press the "Let's analyze!" button above.<br>3.Press the "File select" button.<br>4.Open the csv file prepared in step 1.<br>5.Select at least two columns for which you want to examine co-occurrence.<br>6.Press the “Plot graph!" button.<br>7.Your 3D co-occurrence network is ready.<br><br>Note: <br>If you do not have the csv data, you can get it from this site.<br><a href="https://data.world/" target="_blank">https://data.world/</a><br>
+          <ol>
+            <li>Prepare a dataset(.csv) for which you want to examine co-occurrence.</li>
+            <li>Press the "Let's analyze!" button above.</li>
+            <li>Press the "File select" button.</li>
+            <li>Open the csv file prepared in step 1.</li>
+            <li>Select at least two columns for which you want to examine co-occurrence.</li>
+            <li>Press the “Plot graph!" button.</li>
+            <li>Your 3D co-occurrence network is ready.</li>
+          </ol><br>
+          <h3 class="mg-md">
+            Data sample:
+          </h3>
+          Survival of Passengers on the Titanic
+          <ul>
+            <li><a href="src/TitanicSurvival.csv" download>csv</a></li>
+            <li><a href="https://vincentarelbundock.github.io/Rdatasets/doc/carData/TitanicSurvival.html" >doccumentation</a></li>
+          </ul><br>
+          <h3 class="mg-md">Note:</h3>
+          If you do not have the csv data, you can find from kind like these sites.<br>
+          <ul>
+            <li><a href="https://vincentarelbundock.github.io/Rdatasets/articles/data.html" target="_blank">Rdatasets (reccomend)</a></li>
+            <li><a href="https://data.world/" target="_blank">Data world</a></li>
+            <li><a href="https://perso.telecom-paristech.fr/eagan/class/igr204/datasets" target="_blank">Project datasets</a></li>
+          </ul>
+          This project is working on <a href="https://github.com/takamasa1999/3d_network_analysis" target="_blank">GitHub</a>
 				</p>
 			</div>
 		</div>
@@ -110,7 +134,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 offset-lg-2 offset-md-2">
+			<div class="col-lg-4 col-md-4 offset-lg-2 offset-md-2"><br>
 				<div class="card">
 					<div class="card-body team-card">
 						<img src="img/lazyload-ph.png" data-src="img/IMG_3349%202.jpg" class="rounded-circle mx-auto d-block mt-5 lazyload" width="100" alt="90E8897E 3ABC-4340-B0FC-1B0A7881A248.JPG" />
@@ -128,7 +152,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div><br><br><br>
 			</div>
 		</div>
 	</div>
