update for publish

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
             <li>Select at least two columns for which you want to examine co-occurrence.</li>
             <li>Press the “Plot graph!" button.</li>
             <li>Your 3D co-occurrence network is ready.</li>
-          </ol><br>
+          </ol>
+          <div class="youtube_container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z5gJVg8VpDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <br><br>
           <h3 class="mg-md">
             Data sample:
           </h3>
@@ -87,7 +91,8 @@
           <ul>
             <li><a href="src/TitanicSurvival.csv" download>csv</a></li>
             <li><a href="https://vincentarelbundock.github.io/Rdatasets/doc/carData/TitanicSurvival.html" >doccumentation</a></li>
-          </ul><br>
+          </ul>
+          <br>
           <h3 class="mg-md">Note:</h3>
           If you do not have the csv data, you can find from kind like these sites.<br>
           <ul>
