--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,24 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="3D">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta charset="utf-8">
+  <meta name="keywords" content="3D">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
-
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css?7606">
 	<link rel="stylesheet" type="text/css" href="style.css?383">
 	<link rel="stylesheet" type="text/css" href="./css/feather.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Oleo+Script&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Pacifico&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>3D network analyzer tutorial</title>
-
-<!-- Analytics -->
-
-<!-- Analytics END -->
-
+  <title>3D network analyzer tutorial</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1028208172785198"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
