add google feature

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     gtag('js', new Date());
     gtag('config', 'G-9EEQX7VPG3');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1028208172785198"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div id='loading'>
