--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
+  <link rel="manifest" href="../manifest.json">
   <link rel="shortcut icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css?7606">
 	<link rel="stylesheet" type="text/css" href="style.css?383">
@@ -188,6 +189,13 @@
 <script src="./js/lazysizes.min.js" defer></script>
 <script src="./js/particles.min.js?9601"></script>
 <script src="./js/particles-setup.js?6564"></script>
+<script type="text/javascript">
+  if('serviceWorker' in navigator){
+    navigator.serviceWorker.register('service_worker.js').then(function(){
+      console.log("Service Worker is registered!");
+    });
+  };
+</script>
 <!-- Additional JS END -->
 
 
