optimization for publish

--- a/front_end/contents.html
+++ b/front_end/contents.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id="head">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Cache-Control" content="no-cache">
   <title>3D network analyzer</title>
-  <link rel="stylesheet" href="style/destyle.css">
-  <link rel="stylesheet" href="style/main.css">
   <link rel="manifest" href="manifest.json">
-  <link rel="shortcut icon" type="image/png" href="src/favicon.png">
-  <!-- ライブラリ読み込みなのでheadの最後 -->
+  <!-- <link rel="shortcut icon" type="image/png" href="src/favicon.png"> -->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EEQX7VPG3"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EEQX7VPG3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-9EEQX7VPG3');
-  </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1028208172785198"
-     crossorigin="anonymous"></script>
+  </script> -->
 </head>
 <body>
-  <div id='loading'>
-    <img src="src/loader.gif" id="loadingImg">
-    <div id='loadingMsg'>Page loading...</div>
-    <div id='loadingStatus'></div>
-    <div id='loadingType'></div>
-  </div>
-  <header>
+  <!-- <div class=""> -->
     <h1>3D network analyzer</h1>
     <div class="block" id="block_type_1">
-      <a class="link" href="tutorial/index.html">tutorial</a>
+      <a class="link" href="tutorial_page/">tutorial</a>
     </div>
+    <div role="height_blank_type_1"></div>
     <div class="block" id="block_type_3">
       <form name="file_select_form" id="file_select_form">
         <label for="file_select" class="button" id="button_type_1">File select</label>
@@ -43,8 +30,9 @@
         <input type="text" id="page_id" name="page_id" >
       </form>
     </div>
-  </header>
-  <main>
+    <div role="height_blank_type_1"></div>
+  <!-- </div> -->
+  <div class="">
     <div class="block" id="block_type_10">
       <div class="block" id="block_type_11">
         <p id="table_tytle">Data:</p>
@@ -66,25 +54,25 @@
           <div class="block" id="block_type_5">
             <div class="block" id="block_type_4">
               <p class="name_label">Lowest occur</p>
-              <input class="value_input" id="lowest_occure" type="number" min="0" max="10000" step="1" value="10">
+              <input class="value_input" id="lowest_occure" role="input_type_1" type="number" min="0" max="10000" step="1" value="10">
             </div>
             <div class="block" id="block_type_4">
               <p class="name_label">Lowest simpson</p>
-              <input class="value_input" id="lowest_simpson" type="number" step="0.1" max="1" min="0" value="0.3">
+              <input class="value_input" id="lowest_simpson" role="input_type_1" type="number" step="0.1" max="1" min="0" value="0.3">
             </div>
             <div class="block" id="block_type_4">
               <p class="name_label">Display scale</p>
-              <input class="value_input" id="display_scale" type="number" step="0.1" max="3" min="0.1" value="1">
+              <input class="value_input" id="display_scale" role="input_type_1" type="number" step="0.1" max="3" min="0.1" value="1">
             </div>
             <div class="block" id="block_type_4">
               <p class="name_label">Hover text</p>
-              <input type="checkbox" class="tg_switch" id="hv_txt" checked>
+              <input type="checkbox" class="tg_switch" id="hv_txt"checked>
             </div>
           </div>
           <p class="name_label">Remove word</p>
           <div class="block" id="block_type_5">
             <div class="remove_word_div">
-              <input class="remove_word" id="remove_word_1" type="text" name="remove_word" value="null">
+              <input class="remove_word" id="remove_word_1" role="input_type_1" type="text" name="remove_word" value="null">
             </div>
             <div class="block" id="block_type_6">
               <button type="button" class="button" id="button_type_2" onclick="AddRwTxtBox()">+</button>
@@ -92,9 +80,11 @@
             </div>
           </div>
         </form>
+        <div role="height_blank_type_1"></div>
         <div class="block" id="block_type_3">
           <button type="button" class="button" id="button_type_1" onclick="PlotGraph()">Plot graph!</button>
         </div>
+        <div role="height_blank_type_1"></div>
       </div>
       <div class="block" id="block_type_7">
         <p id="form_title">Network:</p>
@@ -105,19 +95,8 @@
         </div>
       </div>
     </div>
-  </main>
-  <footer>
-    <p>© 2022 Repainter, Leende</p>
-    <p><a href="mailto:audiofilesfrom2021@gmail.com" class="link" id="link_type1">audiofilesfrom2021@gmail.com</a></p>
-  </footer>
-  <!-- 実行系scriptなのでbodyの最後 -->
+  </div>
   <script type="text/javascript" src="js/myscr.js"></script>
-  <script type="text/javascript">
-    if('serviceWorker' in navigator){
-  	  navigator.serviceWorker.register('service_worker.js').then(function(){
-  		  console.log("Service Worker is registered!");
-  	  });
-    };
-  </script>
+  <!-- 登録されない、、、 -->
 </body>
 </html>
